--- a/cart/templates/cart/cart-view.html
+++ b/cart/templates/cart/cart-view.html
@@ -9,8 +9,6 @@
     {% for item in cart %}
     {% with product=item.product %}
     
-  
-
 
     <br />
 
@@ -82,11 +80,19 @@
                 >
                   Delete
                 </button>
-              </div>
+
+                
+              </div> 
+      
+              
             </div>
+            
           </div>
+          
         </div>
+        
       </div>
+      
     </div>
 
     {% endwith %}
@@ -99,6 +105,13 @@
           {{ cart.get_total_price }}
         </div>
       </div>
+      <button
+                  type="button"
+                  class="btn btn-success btn-md text-bg-light mt-4"
+            
+                >
+                <a class="nav-link text-decoration-none" href="{% url 'payment:checkout' %}">Checkout</a>
+                </button>
     </div>
   </div>
 
